--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "axios": "^1.0.0",
     "bootstrap": "^5.2.3",
     "jwt-decoder": "^0.0.0",
+    "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "reactjs-popup": "^2.0.5",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
