--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.16.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.0.0",
     "bootstrap": "^5.2.3",
     "jwt-decoder": "^0.0.0",
+    "jwt-encode": "^1.0.1",
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
@@ -19,6 +21,7 @@
     "reactjs-popup": "^2.0.5",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
+    "stripe": "^11.6.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
