--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "net": "^1.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.11",
     "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
