--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^1.0.0",
     "bootstrap": "^5.2.3",
     "jwt-decoder": "^0.0.0",
+    "jwt-decode": "^3.1.0",
     "jwt-encode": "^1.0.1",
     "net": "^1.0.2",
     "react": "^18.2.0",
